only run for f43, f42 will not use this action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       fail-fast: false
       matrix:
         arch: ${{ github.event.inputs.arm == 'true' && fromJSON('["aarch64"]') || fromJSON('["aarch64", "x86_64"]') }}
-        fedora_version: [42, 43]
+        fedora_version: [43]
         # exclude:
         #   - arch: aarch64
         #     fedora_version: 41
