--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,9 +30,6 @@ jobs:
     runs-on: ${{ matrix.arch == 'aarch64' && 'ubuntu-24.04-arm' || 'ubuntu-24.04' }}
 
     steps:
-      - name: Maximize build space
-        uses: ublue-os/remove-unwanted-software@v9
-
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -81,8 +78,11 @@ jobs:
 
       - name: Setup Secure Boot
         run: |
-          sudo apt-get install efitools -y
+          sudo apt-get install -y pk12util certutil
           ./create_sign.sh
+
+      - name: Maximize build space
+        uses: ublue-os/remove-unwanted-software@cc0becac701cf642c8f0a6613bbdaf5dc36b259e # v9
 
       - name: Compile Kernel
         run: |
