add missing key check

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,9 +24,6 @@ jobs:
       matrix:
         arch: ${{ github.event.inputs.arm == 'true' && fromJSON('["aarch64"]') || fromJSON('["aarch64", "x86_64"]') }}
         fedora_version: [43]
-        # exclude:
-        #   - arch: aarch64
-        #     fedora_version: 41
     runs-on: ${{ matrix.arch == 'aarch64' && 'ubuntu-24.04-arm' || 'ubuntu-24.04' }}
 
     steps:
@@ -71,10 +68,14 @@ jobs:
           UBLUE_MOKKEY_KERNEL: ${{ secrets.UBLUE_MOKKEY_KERNEL }}
         run: |
           mkdir -p certs
-          echo "${UBLUE_MOKKEY_LEGACY}" > certs/ubmok101.priv
-          cp ubmok101.cer certs/ubmok101.der
-          echo "${UBLUE_MOKKEY_KERNEL}" > certs/ubmok102.priv
-          cp ubmok102.cer certs/ubmok102.der
+          if [ -n "$UBLUE_MOKKEY_LEGACY" ] && [ -n "$UBLUE_MOKKEY_KERNEL" ]; then
+            echo "${UBLUE_MOKKEY_LEGACY}" > certs/ubmok101.priv
+            cp ubmok101.cer certs/ubmok101.der
+            echo "${UBLUE_MOKKEY_KERNEL}" > certs/ubmok102.priv
+            cp ubmok102.cer certs/ubmok102.der
+          else
+            echo "One or more keys are missing, setup will create temporary keys"
+          fi
 
       - name: Setup Secure Boot
         run: |
