add broadcom wl for now

--- a/kernel-s390x-fedora.config
+++ b/kernel-s390x-fedora.config
@@ -8642,6 +8642,7 @@ CONFIG_WLAN=y
 CONFIG_WLCORE=m
 CONFIG_WLCORE_SDIO=m
 CONFIG_WLCORE_SPI=m
+# CONFIG_WL is not set
 CONFIG_WPCM450_SOC=m
 # CONFIG_WQ_CPU_INTENSIVE_REPORT is not set
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
