--- a/kernel-aarch64-64k-rhel.config
+++ b/kernel-aarch64-64k-rhel.config
@@ -8612,6 +8612,7 @@ CONFIG_WLAN_VENDOR_SILABS=y
 # CONFIG_WLAN_VENDOR_TI is not set
 # CONFIG_WLAN_VENDOR_ZYDAS is not set
 CONFIG_WLAN=y
+# CONFIG_WL is not set
 CONFIG_WMI_BMOF=m
 # CONFIG_WPCM450_SOC is not set
 # CONFIG_WQ_CPU_INTENSIVE_REPORT is not set
