--- a/kernel-ppc64le-rhel.config
+++ b/kernel-ppc64le-rhel.config
@@ -7954,6 +7954,7 @@ CONFIG_WLAN_VENDOR_SILABS=y
 # CONFIG_WLAN_VENDOR_ST is not set
 # CONFIG_WLAN_VENDOR_TI is not set
 # CONFIG_WLAN_VENDOR_ZYDAS is not set
+# CONFIG_WL is not set
 CONFIG_WMI_BMOF=m
 # CONFIG_WPCM450_SOC is not set
 # CONFIG_WQ_CPU_INTENSIVE_REPORT is not set
