--- a/kernel-s390x-debug-fedora.config
+++ b/kernel-s390x-debug-fedora.config
@@ -8674,6 +8674,7 @@ CONFIG_WLAN=y
 CONFIG_WLCORE=m
 CONFIG_WLCORE_SDIO=m
 CONFIG_WLCORE_SPI=m
+# CONFIG_WL is not set
 CONFIG_WPCM450_SOC=m
 CONFIG_WQ_CPU_INTENSIVE_REPORT=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
