--- a/kernel-x86_64-fedora.config
+++ b/kernel-x86_64-fedora.config
@@ -3917,7 +3917,6 @@ CONFIG_LED_TRIGGER_PHY=y
 # CONFIG_LEGACY_VSYSCALL_EMULATE is not set
 # CONFIG_LEGACY_VSYSCALL_NONE is not set
 CONFIG_LEGACY_VSYSCALL_XONLY=y
-CONFIG_LEGION_LAPTOP=m
 CONFIG_LENOVO_SE10_WDT=m
 CONFIG_LENOVO_SE30_WDT=m
 CONFIG_LENOVO_WMI_CAMERA=m
@@ -9368,6 +9367,7 @@ CONFIG_WLAN=y
 CONFIG_WLCORE=m
 CONFIG_WLCORE_SDIO=m
 CONFIG_WLCORE_SPI=m
+CONFIG_WL=m
 CONFIG_WMI_BMOF=m
 CONFIG_WPCM450_SOC=m
 # CONFIG_WQ_CPU_INTENSIVE_REPORT is not set
