--- a/kernel-x86_64-rt-debug-rhel.config
+++ b/kernel-x86_64-rt-debug-rhel.config
@@ -3507,7 +3507,6 @@ CONFIG_LEGACY_TIOCSTI=y
 # CONFIG_LEGACY_VSYSCALL_EMULATE is not set
 # CONFIG_LEGACY_VSYSCALL_NONE is not set
 CONFIG_LEGACY_VSYSCALL_XONLY=y
-CONFIG_LEGION_LAPTOP=m
 # CONFIG_LENOVO_SE10_WDT is not set
 # CONFIG_LENOVO_SE30_WDT is not set
 # CONFIG_LENOVO_WMI_CAMERA is not set
@@ -8523,6 +8522,7 @@ CONFIG_WLAN_VENDOR_SILABS=y
 # CONFIG_WLAN_VENDOR_TI is not set
 # CONFIG_WLAN_VENDOR_ZYDAS is not set
 CONFIG_WLAN=y
+CONFIG_WL=m
 CONFIG_WMI_BMOF=m
 # CONFIG_WPCM450_SOC is not set
 # CONFIG_WQ_CPU_INTENSIVE_REPORT is not set
