--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,14 +93,14 @@ jobs:
       - name: Separate debuginfo into different folder
         run: |
           mkdir -p ./build/DRPMS/
-          mv ./build/RPMS/kernel-debuginfo-*.rpm ./build/DRPMS/
+          mv ./build/RPMS/${{ matrix.arch }}/kernel-debuginfo-*.rpm ./build/DRPMS/
 
       - name: Upload Kernel to action
         uses: actions/upload-artifact@v4
         with:
           name: kernel-f${{ matrix.fedora_version}}-${{ matrix.arch }}
           path: |
-            ./build/RPMS/kernel-*.rpm
+            ./build/RPMS/${{ matrix.arch }}/kernel-*.rpm
           compression-level: 7
 
       - name: Upload Kernel debuginfo to action
@@ -121,9 +121,9 @@ jobs:
           cat PKGBUILD-ACTION | \
             sed "s/VERSION_FEDORA/${KERNEL_VER}.x86_64/" | \
             sed "s/VERSION_TAG/${ARCH_VER}/" \
-            > ./build/RPMS/PKGBUILD
+            > ./build/RPMS/${{ matrix.arch }}/PKGBUILD
           sudo podman build . -f Dockerfile-arch --tag 'arch_builder' --build-arg UID=$(id -u) --build-arg GID=$(id -g) 
-          sudo podman run --rm -v $(pwd)/build/RPMS/:/workspace arch_builder makepkg -s
+          sudo podman run --rm -v $(pwd)/build/RPMS/${{ matrix.arch }}/:/workspace arch_builder makepkg -s
 
       - name: Upload Kernel arch package to action
         uses: actions/upload-artifact@v4
@@ -131,7 +131,7 @@ jobs:
         with:
           name: linux-f${{ matrix.fedora_version }}-arch
           path: |
-            ./build/RPMS/linux-*.pkg.tar.zst
+            ./build/RPMS/${{ matrix.arch }}/linux-*.pkg.tar.zst
           compression-level: 7
 
       - name: Upload Kernel to release
@@ -145,9 +145,9 @@ jobs:
           action: softprops/action-gh-release@v2
           with: |
             files: |
-              ./build/RPMS/kernel-*.rpm
-              ./build/RPMS/linux-*.pkg.tar.zst
-              ./build/RPMS/linux-*.pkg.tar.zst.sig
+              ./build/RPMS/${{ matrix.arch }}/kernel-*.rpm
+              ./build/RPMS/${{ matrix.arch }}/linux-*.pkg.tar.zst
+              ./build/RPMS/${{ matrix.arch }}/linux-*.pkg.tar.zst.sig
             fail_on_unmatched_files: false
             make_latest: false
 
