--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,12 @@ on:
 permissions:
   contents: write
 
+concurrency:
+  # Group by commit hash so that
+  # the release cancels the push
+  group: ${{ github.sha }}
+  cancel-in-progress: true
+
 jobs:
   build_kernel:
     environment: prod
