--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,13 +80,15 @@ jobs:
       - name: Maximize build space
         run: |
           df -h
+          #  remove swapfile (3gb)
+          sudo swapoff /swapfile && sudo rm -f /swapfile
           # Remove toolchains, browsers
           shopt -s nullglob
           printf '%s\0' /opt/PyPy /opt/az /opt/node/ /opt/pipx /opt/go /opt/Ruby \
               /usr/lib/llvm-* /usr/local/julia* /usr/local/lib/android /usr/share/dotnet \
               /usr/share/swift /usr/local/.ghcup /usr/lib/firefox /opt/google/chrome \
               /opt/microsoft/msedge /usr/share/miniconda /opt/hostedtoolcache \
-              /swapfile | sudo xargs -0 -n1 -P8 rm -rf
+              | sudo xargs -0 -n1 -P8 rm -rf
           df -h
 
       - name: Compile Kernel
