--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -123,21 +123,17 @@ jobs:
 
       - name: Upload Kernel to release
         if: github.event_name == 'release'
-        uses: Wandalen/wretry.action@v3.8.0
+        uses: softprops/action-gh-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          attempt_limit: 3
-          attempt_delay: 15000
-          action: softprops/action-gh-release@v2
-          with: |
-            files: |
-              ./build/RPMS/${{ matrix.arch }}/kernel-*.rpm
-              ./build/SRPMS/${{ matrix.arch }}/kernel-*.rpm
-              ./build/RPMS/${{ matrix.arch }}/linux-*.pkg.tar.zst
-              ./build/RPMS/${{ matrix.arch }}/linux-*.pkg.tar.zst.sig
-            fail_on_unmatched_files: false
-            make_latest: false
+          files: |
+            ./build/RPMS/${{ matrix.arch }}/kernel-*.rpm
+            ./build/SRPMS/${{ matrix.arch }}/kernel-*.rpm
+            ./build/RPMS/${{ matrix.arch }}/linux-*.pkg.tar.zst
+            ./build/RPMS/${{ matrix.arch }}/linux-*.pkg.tar.zst.sig
+          fail_on_unmatched_files: false
+          make_latest: false
 
   # Trigger ublue-os/akmods build/kernel cache
   post_release:
