--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       matrix:
         arch: ["aarch64", "x86_64"]
         fedora_version: [43]
-    runs-on: ${{ matrix.arch == 'aarch64' && 'ubuntu-24.04-arm' || (github.event_name == 'release' && 'blacksmith-16vcpu-ubuntu-2404' || 'ubuntu-24.04') }}
+    runs-on: ${{ matrix.arch == 'aarch64' && 'ubuntu-24.04-arm' || 'ubuntu-24.04' }}
 
     steps:
       - name: Checkout repository
@@ -135,6 +135,7 @@ jobs:
           fail_on_unmatched_files: false
           make_latest: false
 
+  # Trigger ublue-os/akmods build/kernel cache
   post_release:
     runs-on: ubuntu-24.04
     needs: build_kernel
