--- a/kernel-ppc64le-rhel.config
+++ b/kernel-ppc64le-rhel.config
@@ -5490,8 +5490,8 @@ CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SCHED_CLASS_EXT=y
 CONFIG_SCHED_CLUSTER=y
 CONFIG_SCHED_CORE=y
-# CONFIG_SCHED_MC is not set
 CONFIG_SCHED_MC_PRIO=y
+CONFIG_SCHED_MC=y
 CONFIG_SCHED_OMIT_FRAME_POINTER=y
 CONFIG_SCHED_SMT=y
 CONFIG_SCHED_STACK_END_CHECK=y
