--- a/kernel-aarch64-64k-debug-rhel.config
+++ b/kernel-aarch64-64k-debug-rhel.config
@@ -2109,6 +2109,7 @@ CONFIG_FAIL_PAGE_ALLOC=y
 CONFIG_FAILSLAB=y
 CONFIG_FAIL_SUNRPC=y
 CONFIG_FAIR_GROUP_SCHED=y
+# CONFIG_FANATEC is not set
 CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
 CONFIG_FANOTIFY=y
 # CONFIG_FARSYNC is not set
