--- a/kernel-x86_64-debug-fedora.config
+++ b/kernel-x86_64-debug-fedora.config
@@ -2284,6 +2284,7 @@ CONFIG_FAIL_SKB_REALLOC=y
 CONFIG_FAILSLAB=y
 CONFIG_FAIL_SUNRPC=y
 CONFIG_FAIR_GROUP_SCHED=y
+CONFIG_FANATEC=m
 CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
 CONFIG_FANOTIFY=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
