--- a/kernel-aarch64-rt-fedora.config
+++ b/kernel-aarch64-rt-fedora.config
@@ -2690,6 +2690,7 @@ CONFIG_F2FS_UNFAIR_RWSEM=y
 CONFIG_FAILOVER=m
 # CONFIG_FAIL_SUNRPC is not set
 CONFIG_FAIR_GROUP_SCHED=y
+# CONFIG_FANATEC is not set
 CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
 CONFIG_FANOTIFY=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
