--- a/kernel-ppc64le-fedora.config
+++ b/kernel-ppc64le-fedora.config
@@ -2041,6 +2041,7 @@ CONFIG_FA_DUMP=y
 CONFIG_FAILOVER=m
 # CONFIG_FAIL_SUNRPC is not set
 CONFIG_FAIR_GROUP_SCHED=y
+# CONFIG_FANATEC is not set
 CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
 CONFIG_FANOTIFY=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
