--- a/kernel-riscv64-rhel.config
+++ b/kernel-riscv64-rhel.config
@@ -1792,6 +1792,7 @@ CONFIG_FAILOVER=m
 # CONFIG_FAIL_SKB_REALLOC is not set
 # CONFIG_FAIL_SUNRPC is not set
 CONFIG_FAIR_GROUP_SCHED=y
+# CONFIG_FANATEC is not set
 CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
 CONFIG_FANOTIFY=y
 # CONFIG_FARSYNC is not set
