--- a/kernel-s390x-debug-fedora.config
+++ b/kernel-s390x-debug-fedora.config
@@ -2067,6 +2067,7 @@ CONFIG_FAIL_SKB_REALLOC=y
 CONFIG_FAILSLAB=y
 CONFIG_FAIL_SUNRPC=y
 CONFIG_FAIR_GROUP_SCHED=y
+# CONFIG_FANATEC is not set
 CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
 CONFIG_FANOTIFY=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
