--- a/kernel-s390x-zfcpdump-rhel.config
+++ b/kernel-s390x-zfcpdump-rhel.config
@@ -1802,6 +1802,7 @@ CONFIG_FAILOVER=y
 # CONFIG_FAIL_SKB_REALLOC is not set
 # CONFIG_FAIL_SUNRPC is not set
 CONFIG_FAIR_GROUP_SCHED=y
+# CONFIG_FANATEC is not set
 CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
 CONFIG_FANOTIFY=y
 # CONFIG_FARSYNC is not set
