--- a/kernel-x86_64-fedora.config
+++ b/kernel-x86_64-fedora.config
@@ -2267,6 +2267,7 @@ CONFIG_FACETIMEHD=m
 CONFIG_FAILOVER=m
 # CONFIG_FAIL_SUNRPC is not set
 CONFIG_FAIR_GROUP_SCHED=y
+CONFIG_FANATEC=m
 CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
 CONFIG_FANOTIFY=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
