--- a/kernel-x86_64-rt-debug-rhel.config
+++ b/kernel-x86_64-rt-debug-rhel.config
@@ -2015,6 +2015,7 @@ CONFIG_FAIL_PAGE_ALLOC=y
 CONFIG_FAILSLAB=y
 CONFIG_FAIL_SUNRPC=y
 CONFIG_FAIR_GROUP_SCHED=y
+CONFIG_FANATEC=m
 CONFIG_FANOTIFY_ACCESS_PERMISSIONS=y
 CONFIG_FANOTIFY=y
 # CONFIG_FARSYNC is not set
