--- a/kernel-aarch64-rt-debug-rhel.config
+++ b/kernel-aarch64-rt-debug-rhel.config
@@ -2387,7 +2387,6 @@ CONFIG_GNSS=m
 # CONFIG_GOOGLE_FIRMWARE is not set
 # CONFIG_GP2AP002 is not set
 # CONFIG_GP2AP020A00F is not set
-# CONFIG_GPDFAN is not set
 # CONFIG_GPD_POCKET_FAN is not set
 # CONFIG_GPIB is not set
 # CONFIG_GPIO_74X164 is not set
@@ -6338,6 +6337,7 @@ CONFIG_SENSORS_G762=m
 # CONFIG_SENSORS_GIGABYTE_WATERFORCE is not set
 # CONFIG_SENSORS_GL518SM is not set
 # CONFIG_SENSORS_GL520SM is not set
+# CONFIG_SENSORS_GPD is not set
 CONFIG_SENSORS_GPIO_FAN=m
 # CONFIG_SENSORS_HIH6130 is not set
 # CONFIG_SENSORS_HMC5843_I2C is not set
