--- a/kernel-riscv64-fedora.config
+++ b/kernel-riscv64-fedora.config
@@ -2330,7 +2330,6 @@ CONFIG_GOLDFISH=y
 # CONFIG_GOOGLE_FIRMWARE is not set
 CONFIG_GP2AP002=m
 # CONFIG_GP2AP020A00F is not set
-# CONFIG_GPDFAN is not set
 # CONFIG_GPIB is not set
 # CONFIG_GPIO_74X164 is not set
 # CONFIG_GPIO_74XX_MMIO is not set
@@ -6282,6 +6281,7 @@ CONFIG_SENSORS_G762=m
 CONFIG_SENSORS_GIGABYTE_WATERFORCE=m
 CONFIG_SENSORS_GL518SM=m
 CONFIG_SENSORS_GL520SM=m
+# CONFIG_SENSORS_GPD is not set
 # CONFIG_SENSORS_GPIO_FAN is not set
 # CONFIG_SENSORS_HIH6130 is not set
 # CONFIG_SENSORS_HMC5843_I2C is not set
