--- a/kernel-x86_64-rt-rhel.config
+++ b/kernel-x86_64-rt-rhel.config
@@ -2220,7 +2220,6 @@ CONFIG_GNSS=m
 # CONFIG_GOOGLE_FIRMWARE is not set
 # CONFIG_GP2AP002 is not set
 # CONFIG_GP2AP020A00F is not set
-CONFIG_GPDFAN=m
 # CONFIG_GPD_POCKET_FAN is not set
 # CONFIG_GPIB is not set
 # CONFIG_GPIO_74X164 is not set
@@ -6085,6 +6084,7 @@ CONFIG_SENSORS_G760A=m
 # CONFIG_SENSORS_GIGABYTE_WATERFORCE is not set
 CONFIG_SENSORS_GL518SM=m
 CONFIG_SENSORS_GL520SM=m
+CONFIG_SENSORS_GPD=m
 # CONFIG_SENSORS_GPIO_FAN is not set
 CONFIG_SENSORS_HDAPS=m
 # CONFIG_SENSORS_HIH6130 is not set
