--- a/kernel-aarch64-rt-64k-fedora.config
+++ b/kernel-aarch64-rt-64k-fedora.config
@@ -2959,7 +2959,6 @@ CONFIG_GOOGLE_COREBOOT_TABLE=m
 # CONFIG_GOOGLE_FIRMWARE is not set
 CONFIG_GP2AP002=m
 # CONFIG_GP2AP020A00F is not set
-# CONFIG_GPDFAN is not set
 # CONFIG_GPIB is not set
 # CONFIG_GPIO_74X164 is not set
 # CONFIG_GPIO_74XX_MMIO is not set
@@ -7724,6 +7723,7 @@ CONFIG_SENSORS_G762=m
 CONFIG_SENSORS_GIGABYTE_WATERFORCE=m
 CONFIG_SENSORS_GL518SM=m
 CONFIG_SENSORS_GL520SM=m
+# CONFIG_SENSORS_GPD is not set
 CONFIG_SENSORS_GPIO_FAN=m
 # CONFIG_SENSORS_HIH6130 is not set
 # CONFIG_SENSORS_HMC5843_I2C is not set
