--- a/kernel-riscv64-debug-rhel.config
+++ b/kernel-riscv64-debug-rhel.config
@@ -2022,7 +2022,6 @@ CONFIG_GOLDFISH=y
 # CONFIG_GOOGLE_FIRMWARE is not set
 # CONFIG_GP2AP002 is not set
 # CONFIG_GP2AP020A00F is not set
-# CONFIG_GPDFAN is not set
 # CONFIG_GPD_POCKET_FAN is not set
 # CONFIG_GPIB is not set
 # CONFIG_GPIO_74X164 is not set
@@ -5668,6 +5667,7 @@ CONFIG_SENSORS_G760A=m
 # CONFIG_SENSORS_GIGABYTE_WATERFORCE is not set
 CONFIG_SENSORS_GL518SM=m
 CONFIG_SENSORS_GL520SM=m
+# CONFIG_SENSORS_GPD is not set
 # CONFIG_SENSORS_GPIO_FAN is not set
 # CONFIG_SENSORS_HIH6130 is not set
 # CONFIG_SENSORS_HMC5843_I2C is not set
