--- a/kernel-x86_64-fedora.config
+++ b/kernel-x86_64-fedora.config
@@ -2515,7 +2515,6 @@ CONFIG_GNSS_USB=m
 # CONFIG_GOOGLE_FIRMWARE is not set
 CONFIG_GP2AP002=m
 # CONFIG_GP2AP020A00F is not set
-CONFIG_GPDFAN=m
 CONFIG_GPD_POCKET_FAN=m
 # CONFIG_GPIB is not set
 # CONFIG_GPIO_74X164 is not set
@@ -6698,6 +6697,7 @@ CONFIG_SENSORS_G762=m
 CONFIG_SENSORS_GIGABYTE_WATERFORCE=m
 CONFIG_SENSORS_GL518SM=m
 CONFIG_SENSORS_GL520SM=m
+CONFIG_SENSORS_GPD=m
 # CONFIG_SENSORS_GPIO_FAN is not set
 CONFIG_SENSORS_HDAPS=m
 # CONFIG_SENSORS_HIH6130 is not set
