--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -137,13 +137,6 @@ jobs:
             FEDORA_VERSION="${{ matrix.fedora_version }}" ARCH="${{ matrix.arch }}" \
               buildah unshare ./oci.sh
             echo "digest=$(cat ./.oci-digest)" >> $GITHUB_OUTPUT
-          
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v3
-        with:
-          subject-digest: "${{ steps.oci.outputs.digest }}"
-          subject-name: "ghcr.io/${{ github.repository_owner }}/${{ github.repository }}"
-          push-to-registry: true
       
       - name: Upload OCI image to Registry
         run: |
@@ -155,6 +148,20 @@ jobs:
             podman push localhost/kernel-bazzite-${{ matrix.fedora_version}} \
               "docker://ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest-f${{ matrix.fedora_version }}-${{ matrix.arch }}"
           fi
+          
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Generate OCI attestation
+        uses: actions/attest-build-provenance@v3
+        with:
+          subject-digest: "${{ steps.oci.outputs.digest }}"
+          subject-name: "ghcr.io/${{ github.repository_owner }}/${{ github.repository }}"
+          push-to-registry: true
 
       - name: Upload Kernel to release
         if: github.ref_type == 'tag'
