--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -142,11 +142,11 @@ jobs:
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | podman login ghcr.io -u ${{ github.actor }} --password-stdin
           podman push "localhost/kernel-f${{ matrix.fedora_version}}" \
-            "docker://ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ github.ref_name }}-f${{ matrix.fedora_version }}-${{ matrix.arch }}"
+            "docker://ghcr.io/${{ github.repository }}:${{ github.ref_name }}-f${{ matrix.fedora_version }}-${{ matrix.arch }}"
           
           if [ "${{ github.ref_type }}" = "tag" ]; then
             podman push "localhost/kernel-f${{ matrix.fedora_version}}" \
-              "docker://ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest-f${{ matrix.fedora_version }}-${{ matrix.arch }}"
+              "docker://ghcr.io/${{ github.repository }}:latest-f${{ matrix.fedora_version }}-${{ matrix.arch }}"
           fi
           
       - name: Login to GitHub Container Registry
@@ -160,7 +160,7 @@ jobs:
         uses: actions/attest-build-provenance@v3
         with:
           subject-digest: "${{ steps.oci.outputs.digest }}"
-          subject-name: "ghcr.io/${{ github.repository_owner }}/${{ github.repository }}"
+          subject-name: "ghcr.io/${{ github.repository }}"
           push-to-registry: true
 
       - name: Upload Kernel to release
