--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ permissions:
   id-token: write
   contents: write
   attestations: write
+  packages: write
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref_name }}
