--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           CCACHE_USE=${{ (startsWith(github.ref, 'refs/heads/bazzite-') || startsWith(github.ref, 'refs/tags/') ) && '1' || '0' }}
           CCACHE_WRITE=${{ startsWith(github.ref, 'refs/heads/bazzite-') && '1' || '0' }}
-          CCACHE_READONLY=${{ startsWith(github.ref, 'refs/heads/bazzite-') && 'false' || 'true' }}
+          CCACHE_READONLY=${{ startsWith(github.ref, 'refs/heads/bazzite-') && '' || 'true' }}
           echo "ccache_use=$CCACHE_USE" >> $GITHUB_OUTPUT
           echo "ccache_write=$CCACHE_WRITE" >> $GITHUB_OUTPUT
           echo "ccache_readonly=$CCACHE_READONLY" >> $GITHUB_OUTPUT
