--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,10 +51,10 @@ jobs:
         with:
           path: |
             ccache
-          # /var/lib/containers/storage
+            /var/lib/containers/storage
           key: ${{ steps.ccache.outputs.ccache_key }}
           restore-keys: |
-            ccache-${{ matrix.arch }}*
+            ccache-${{ matrix.arch }}
 
       - name: Create Build Environment
         run: |
@@ -116,7 +116,7 @@ jobs:
         with:
           path: |
             ccache
-          # /var/lib/containers/storage
+            /var/lib/containers/storage
           key: ${{ steps.ccache.outputs.ccache_key }}
 
       # - name: Separate debuginfo into different folder
