--- a/kernel-aarch64-fedora.config
+++ b/kernel-aarch64-fedora.config
@@ -9179,6 +9179,7 @@ CONFIG_SYSTEM_TRUSTED_KEYS=""
 # CONFIG_SYSV68_PARTITION is not set
 # CONFIG_SYSV_FS is not set
 CONFIG_SYSVIPC=y
+# CONFIG_T150 is not set
 # CONFIG_T5403 is not set
 CONFIG_TABLET_SERIAL_WACOM4=m
 CONFIG_TABLET_USB_ACECAD=m
@@ -9437,6 +9438,7 @@ CONFIG_TI_TSC2046=m
 CONFIG_TLS_DEVICE=y
 CONFIG_TLS=m
 # CONFIG_TLS_TOE is not set
+# CONFIG_TMFF2 is not set
 CONFIG_TMP006=m
 # CONFIG_TMP007 is not set
 CONFIG_TMP117=m
