--- a/kernel-s390x-zfcpdump-rhel.config
+++ b/kernel-s390x-zfcpdump-rhel.config
@@ -6872,6 +6872,7 @@ CONFIG_SYSTEM_TRUSTED_KEYS=""
 # CONFIG_SYSV68_PARTITION is not set
 # CONFIG_SYSV_FS is not set
 # CONFIG_SYSVIPC is not set
+# CONFIG_T150 is not set
 # CONFIG_T5403 is not set
 CONFIG_TABLET_SERIAL_WACOM4=m
 CONFIG_TABLET_USB_ACECAD=m
@@ -7064,6 +7065,7 @@ CONFIG_TI_SCI_PROTOCOL=y
 CONFIG_TLS_DEVICE=y
 CONFIG_TLS=m
 # CONFIG_TLS_TOE is not set
+# CONFIG_TMFF2 is not set
 # CONFIG_TMP006 is not set
 # CONFIG_TMP007 is not set
 # CONFIG_TMP117 is not set
