--- a/kernel-x86_64-debug-fedora.config
+++ b/kernel-x86_64-debug-fedora.config
@@ -8060,6 +8060,7 @@ CONFIG_SYSTEM_TRUSTED_KEYS=""
 # CONFIG_SYSV68_PARTITION is not set
 CONFIG_SYSV_FS=m
 CONFIG_SYSVIPC=y
+CONFIG_T150=m
 # CONFIG_T5403 is not set
 CONFIG_TABLET_SERIAL_WACOM4=m
 CONFIG_TABLET_USB_ACECAD=m
@@ -8263,6 +8264,7 @@ CONFIG_TLAN=m
 CONFIG_TLS_DEVICE=y
 CONFIG_TLS=m
 # CONFIG_TLS_TOE is not set
+CONFIG_TMFF2=m
 # CONFIG_TMP006 is not set
 # CONFIG_TMP007 is not set
 CONFIG_TMP117=m
