--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,6 @@ jobs:
         with:
           path: |
             ccache
-            /var/lib/containers/storage
           key: ${{ steps.ccache.outputs.ccache_key }}
           restore-keys: |
             ccache-${{ matrix.arch }}
@@ -110,13 +109,17 @@ jobs:
           # We are signed, remove certs
           rm -rf ./certs
 
+          # Change ccache perms
+          if [ -d "./ccache" ]; then
+            sudo chown -R $UID:$GID ./ccache
+          fi
+
       - name: Backup ccache
         if: ${{ steps.ccache.outputs.ccache_write == '1' }}
         uses: actions/cache/save@v4
         with:
           path: |
             ccache
-            /var/lib/containers/storage
           key: ${{ steps.ccache.outputs.ccache_key }}
 
       # - name: Separate debuginfo into different folder
