--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         id: ccache
         run: |
           TARFILE_RELEASE=$(sed -n 's/^%define[[:space:]]\+tarfile_release[[:space:]]\+//p' kernel.spec)
-          echo "ccache_key=ccache-${{ matrix.arch }}-${TARFILE_RELEASE}" >> $GITHUB_OUTPUT
+          echo "ccache_key=ccache-${{ matrix.arch }}-${TARFILE_RELEASE}-${{ github.sha }}" >> $GITHUB_OUTPUT
           CCACHE_USE=${{ (startsWith(github.ref, 'refs/heads/bazzite-') || startsWith(github.ref, 'refs/tags/') ) && '1' || '0' }}
           CCACHE_WRITE=${{ startsWith(github.ref, 'refs/heads/bazzite-') && '1' || '0' }}
           if [ "${{ startsWith(github.ref, 'refs/heads/bazzite-') }}" == "false" ]; then
@@ -57,6 +57,7 @@ jobs:
             ccache
           key: ${{ steps.ccache.outputs.ccache_key }}
           restore-keys: |
+            ccache-${{ matrix.arch }}-${TARFILE_RELEASE}
             ccache-${{ matrix.arch }}
 
       - name: Create Build Environment
@@ -102,7 +103,7 @@ jobs:
           # Use ccache if:
           # We have a cache hit and ccache is enabled for use
           # OR we are writing to ccache (bazzite- branch)
-          CCACHE_USE=${{ ((steps.ccache.outputs.ccache_use == '1' && steps.restore.outputs.cache-hit == '1') || steps.ccache.outputs.ccache_write == '1') && '1' || '0' }}
+          CCACHE_USE=${{ ((steps.ccache.outputs.ccache_use == '1' && steps.restore.outputs.cache-matched-key != '') || steps.ccache.outputs.ccache_write == '1') && '1' || '0' }}
           sudo podman run --rm -v $(pwd):/workspace -e UID=$UID -e GID=$GID \
               -e ARCH=${{ matrix.arch }} -e FEDORA_VERSION=${{ matrix.fedora_version }} \
               --env CCACHE_USE="$CCACHE_USE" \
