--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,33 +32,33 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       
-      - name: Setup ccache
-        id: ccache
-        run: |
-          TARFILE_RELEASE=$(sed -n 's/^%define[[:space:]]\+tarfile_release[[:space:]]\+//p' kernel.spec)
-          echo "ccache_key=ccache-${{ matrix.arch }}-${TARFILE_RELEASE}-${{ github.sha }}" >> $GITHUB_OUTPUT
-          CCACHE_USE=${{ (startsWith(github.ref, 'refs/heads/bazzite-') || startsWith(github.ref, 'refs/tags/') ) && '1' || '0' }}
-          CCACHE_WRITE=${{ startsWith(github.ref, 'refs/heads/bazzite-') && '1' || '0' }}
-          if [ "${{ startsWith(github.ref, 'refs/heads/bazzite-') }}" == "false" ]; then
-            CCACHE_READONLY="true"
-          else
-            CCACHE_READONLY=""
-          fi
-          echo "ccache_use=$CCACHE_USE" >> $GITHUB_OUTPUT
-          echo "ccache_write=$CCACHE_WRITE" >> $GITHUB_OUTPUT
-          echo "ccache_readonly=$CCACHE_READONLY" >> $GITHUB_OUTPUT
+      # - name: Setup ccache
+      #   id: ccache
+      #   run: |
+      #     TARFILE_RELEASE=$(sed -n 's/^%define[[:space:]]\+tarfile_release[[:space:]]\+//p' kernel.spec)
+      #     echo "ccache_key=ccache-${{ matrix.arch }}-${TARFILE_RELEASE}-${{ github.sha }}" >> $GITHUB_OUTPUT
+      #     CCACHE_USE=${{ (startsWith(github.ref, 'refs/heads/bazzite-') || startsWith(github.ref, 'refs/tags/') ) && '1' || '0' }}
+      #     CCACHE_WRITE=${{ startsWith(github.ref, 'refs/heads/bazzite-') && '1' || '0' }}
+      #     if [ "${{ startsWith(github.ref, 'refs/heads/bazzite-') }}" == "false" ]; then
+      #       CCACHE_READONLY="true"
+      #     else
+      #       CCACHE_READONLY=""
+      #     fi
+      #     echo "ccache_use=$CCACHE_USE" >> $GITHUB_OUTPUT
+      #     echo "ccache_write=$CCACHE_WRITE" >> $GITHUB_OUTPUT
+      #     echo "ccache_readonly=$CCACHE_READONLY" >> $GITHUB_OUTPUT
 
-      - name: Restore ccache
-        if: ${{ steps.ccache.outputs.ccache_use == '1' }}
-        id: restore
-        uses: actions/cache/restore@v4
-        with:
-          path: |
-            ccache
-          key: ${{ steps.ccache.outputs.ccache_key }}
-          restore-keys: |
-            ccache-${{ matrix.arch }}-${TARFILE_RELEASE}
-            ccache-${{ matrix.arch }}
+      # - name: Restore ccache
+      #   if: ${{ steps.ccache.outputs.ccache_use == '1' }}
+      #   id: restore
+      #   uses: actions/cache/restore@v4
+      #   with:
+      #     path: |
+      #       ccache
+      #     key: ${{ steps.ccache.outputs.ccache_key }}
+      #     restore-keys: |
+      #       ccache-${{ matrix.arch }}-${TARFILE_RELEASE}
+      #       ccache-${{ matrix.arch }}
 
       - name: Create Build Environment
         run: |
@@ -103,24 +103,24 @@ jobs:
           # Use ccache if:
           # We have a cache hit and ccache is enabled for use
           # OR we are writing to ccache (bazzite- branch)
-          CCACHE_USE=${{ ((steps.ccache.outputs.ccache_use == '1' && steps.restore.outputs.cache-matched-key != '') || steps.ccache.outputs.ccache_write == '1') && '1' || '0' }}
+          CCACHE_USE=0 #{{ ((steps.ccache.outputs.ccache_use == '1' && steps.restore.outputs.cache-matched-key != '') || steps.ccache.outputs.ccache_write == '1') && '1' || '0' }}
           sudo podman run --rm -v $(pwd):/workspace -e UID=$UID -e GID=$GID \
               -e ARCH=${{ matrix.arch }} -e FEDORA_VERSION=${{ matrix.fedora_version }} \
               --env CCACHE_USE="$CCACHE_USE" \
-              --env CCACHE_READONLY=${{ steps.ccache.outputs.ccache_readonly }} \
               fedora_builder bash ./build.sh \
               | grep -v ".o: warning: objtool:"
+              # --env CCACHE_READONLY={{ steps.ccache.outputs.ccache_readonly }} \
 
           # We are signed, remove certs
           rm -rf ./certs
 
-      - name: Backup ccache
-        if: ${{ steps.ccache.outputs.ccache_write == '1' }}
-        uses: actions/cache/save@v4
-        with:
-          path: |
-            ccache
-          key: ${{ steps.ccache.outputs.ccache_key }}
+      # - name: Backup ccache
+      #   if: ${{ steps.ccache.outputs.ccache_write == '1' }}
+      #   uses: actions/cache/save@v4
+      #   with:
+      #     path: |
+      #       ccache
+      #     key: ${{ steps.ccache.outputs.ccache_key }}
 
       # - name: Separate debuginfo into different folder
       #   run: |
